--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,6 +21,10 @@
     "@trpc/server": "^11.4.4",
     "@acme/auth": "0.0.0",
     "drizzle-orm": "*",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "bun": "latest"
+  },
+  "devDependencies": {
+    "bun-types": "^1.2.20"
   }
 }
