--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -6,9 +6,7 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "exports": {
-    ".": "./src/index.ts",
-    "./client": "./src/client.ts",
-    "./server": "./src/server.ts"
+    ".": "./src/index.ts"
   },
   "files": [
     "src"
@@ -23,5 +21,8 @@
     "@vercel/blob": "^1.1.1",
     "zod": "^4.0.17",
     "@acme/env": "0.0.0"
+  },
+  "optionalDependencies": {
+    "@aws-sdk/client-s3": "^3.864.0"
   }
 }
