--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,7 +38,12 @@
     "check": "bun run typecheck && bun run lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.1",
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -65,22 +70,56 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@shikijs/transformers": "^3.11.0",
+    "@uidotdev/usehooks": "^2.4.1",
+    "ai": "^5.0.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "color": "^5.0.0",
+    "culori": "^4.0.2",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "harden-react-markdown": "^1.0.4",
     "input-otp": "^1.4.2",
+    "jotai": "^2.13.1",
+    "katex": "^0.16.22",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.540.0",
+    "media-chrome": "^4.13.0",
+    "motion": "^12.23.12",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
+    "radix-ui": "^1.4.3",
     "react-day-picker": "^9.8.1",
+    "react-dropzone": "^14.3.8",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
+    "react-image-crop": "^11.0.10",
+    "react-markdown": "^10.1.0",
+    "react-medium-image-zoom": "^5.3.0",
     "react-resizable-panels": "^3.0.4",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.15.4",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "shiki": "^3.11.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "ts-key-enum": "^3.0.13",
+    "tunnel-rat": "^0.1.2",
     "tw-animate-css": "^1.3.7",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^4.0.17"
+  },
+  "devDependencies": {
+    "@types/color": "^4.2.0",
+    "@types/culori": "^4.0.0",
+    "@types/lodash.throttle": "^4.1.9",
+    "@types/qrcode": "^1.5.5",
+    "@types/react-syntax-highlighter": "^15.5.13"
   }
 }
