--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,3 @@
 {
-  "recommendations": [
-    "biomejs.biome",
-    "oven.bun-vscode",
-    "github.vscode-github-actions"
-  ]
+  "recommendations": ["biomejs.biome", "oven.bun-vscode", "github.vscode-github-actions"]
 }
