--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-  "recommendations": ["biomejs.biome", "oven.bun-vscode", "github.vscode-github-actions"]
+  "recommendations": [
+    "biomejs.biome",
+    "oven.bun-vscode",
+    "github.vscode-github-actions",
+    "astro-build.astro-vscode"
+  ]
 }
