--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "check": "biome check . --write --unsafe"
   },
   "dependencies": {
     "astro": "^5.13.2"
