--- a/.github/workflows/pre-pr.yml
+++ b/.github/workflows/pre-pr.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint-and-format:
-    name: Run Linting and Formatting
+    name: Run Linting, Services, and Tests
     runs-on: ubuntu-latest
     
     steps:
@@ -22,8 +22,24 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Install dependencies
-        run: bun install
+      - name: Make start script executable
+        run: chmod +x .devcontainer/start.sh
+
+      - name: Start local services via start.sh (includes install + migrations)
+        env:
+          WORKSPACE_ROOT: ${{ github.workspace }}
+        run: |
+          bash .devcontainer/start.sh
 
       - name: Run linting + type checking
         run: bun format
+
+      - name: Run API tests
+        run: |
+          cd packages/api
+          bun test
+
+      - name: Teardown services
+        if: always()
+        run: |
+          docker compose -f .devcontainer/docker-compose.yml down -v
