Added additional environment variables for local development configuration in pre-PR workflow.

--- a/.github/workflows/pre-pr.yml
+++ b/.github/workflows/pre-pr.yml
@@ -29,6 +29,22 @@ jobs:
         env:
           WORKSPACE_ROOT: ${{ github.workspace }}
           DATABASE_URL: postgres://postgres:postgres@localhost:4444/acme
+          PYTHON: "/usr/bin/python3"
+          STRIPE_SECRET_KEY: ""
+          STRIPE_WEBHOOK_SECRET: ""
+          EMAIL_PROVIDER: "mailpit"
+          SMTP_HOST: "localhost"
+          SMTP_PORT: "1025"
+          SMTP_SECURE: "false"
+          SMTP_FROM: "dev@local.test"
+          STORAGE_PROVIDER: "s3"
+          S3_REGION: "us-east-1"
+          S3_BUCKET: "acme"
+          S3_ACCESS_KEY_ID: "minioadmin"
+          S3_SECRET_ACCESS_KEY: "minioadmin"
+          S3_ENDPOINT: "http://localhost:9000"
+          S3_FORCE_PATH_STYLE: "true"
+          S3_PUBLIC_URL: "http://localhost:9000/acme"
         run: |
           bash .devcontainer/start.sh
 
