Enhanced database migration script to support both local and remote Postgres connections, utilizing appropriate drivers for each environment. Updated package.json to include 'postgres' dependency.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -26,7 +26,8 @@
     "drizzle-orm": "latest",
     "@neondatabase/serverless": "latest",
     "ws": "latest",
-    "@acme/env": "0.0.0"
+    "@acme/env": "0.0.0",
+    "postgres": "latest"
   },
   "devDependencies": {
     "drizzle-kit": "latest",
