--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "zod": "^4.0.17",
     "@acme/tailwind-config": "0.1.0",
     "@acme/ui": "0.0.0",
+    "@acme/localization": "0.0.0",
     "lucide-react": "^0.540.0"
   },
   "devDependencies": {
