--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,7 +35,9 @@
     "typecheck": "bunx tsc -p tsconfig.json --noEmit",
     "lint": "bunx biome check .",
     "format": "bunx biome check --write .",
-    "check": "bun run typecheck && bun run lint"
+    "check": "bun run typecheck && bun run lint",
+    "dev": "storybook dev -p 6006 --no-open",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -54,6 +56,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -72,6 +75,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@shikijs/transformers": "^3.11.0",
+    "@tiptap/html": "^3.2.0",
+    "@tiptap/starter-kit": "^3.2.0",
     "@uidotdev/usehooks": "^2.4.1",
     "ai": "^5.0.18",
     "class-variance-authority": "^0.7.1",
@@ -91,6 +96,7 @@
     "media-chrome": "^4.13.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
+    "next-view-transitions": "^0.3.4",
     "qrcode": "^1.5.4",
     "radix-ui": "^1.4.3",
     "react-day-picker": "^9.8.1",
@@ -112,16 +118,26 @@
     "ts-key-enum": "^3.0.13",
     "tunnel-rat": "^0.1.2",
     "tw-animate-css": "^1.3.7",
+    "use-debounce": "^10.0.5",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/color": "^4.2.0",
     "@types/culori": "^4.0.0",
     "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.throttle": "^4.1.9",
     "@types/qrcode": "^1.5.5",
-    "@types/react-syntax-highlighter": "^15.5.13"
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "classnames": "^2.5.1",
+    "playwright": "^1.55.0",
+    "storybook": "^9.1.2",
+    "tailwindcss": "^4.1.11",
+    "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^3.2.4"
   }
 }
