Added storybook setup for ui package!

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,4 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": { "declaration": true, "emitDeclarationOnly": false, "skipLibCheck": true }
+  "compilerOptions": {
+    "declaration": true,
+    "emitDeclarationOnly": false,
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "types": ["react", "react-dom", "vite/client"],
+    "moduleResolution": "bundler"
+  }
 }
