--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -124,6 +124,9 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^9.1.2",
+    "@storybook/addon-themes": "^9.1.2",
+    "@storybook/react-vite": "^9.1.2",
     "@tailwindcss/postcss": "^4",
     "@types/color": "^4.2.0",
     "@types/culori": "^4.0.0",
@@ -133,10 +136,14 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "classnames": "^2.5.1",
     "playwright": "^1.55.0",
-    "tailwindcss": "^4.1.11",
-    "vite-tsconfig-paths": "^5.1.2",
+    "postcss": "^8.5.6",
+    "storybook": "^9.1.2",
+    "tailwindcss": "^4.1.12",
+    "vite": "^7.1.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
 }
