--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,8 @@
     "@acme/auth": "0.0.0",
     "drizzle-orm": "*",
     "zod": "^4.0.17",
-    "bun": "latest"
+    "bun": "latest",
+    "eventemitter3": "^5.0.1"
   },
   "devDependencies": {
     "bun-types": "^1.2.20"
