--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,6 +16,15 @@
     "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
+      "@acme/ui/*": ["../../packages/ui/src/*"],
+      "@acme/auth": ["../../packages/auth/src/index.ts"],
+      "@acme/convex": ["../../packages/convex/src/index.ts"],
+      "@acme/db": ["../../packages/db/src/index.ts"],
+      "@acme/api": ["../../packages/api/src/index.ts"],
+      "@acme/env": ["../../packages/env/src/index.ts"],
+      "@acme/tailwind-config": ["../../packages/tailwind-config/src/index.ts"],
+      "@acme/storage": ["../../packages/storage/src/index.ts"],
+      "@acme/testing": ["../../packages/testing/src/index.ts"],
       "@/*": ["src/*"],
       "@/components/*": ["src/components/*"],
       "@/app/*": ["src/app/*"],
