--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,10 @@
     "lint": "biome check .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "format": "biome check --write .",
-    "check": "bun run typecheck"
+    "check": "bun run typecheck",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@acme/localization": "0.0.0",
@@ -32,6 +35,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "@playwright/test": "^1.48.2"
   }
 }
